--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json">
+
+  <link rel="apple-touch-icon" href="/appicon.png">
+
+  <link rel="icon" type="image/png" href="/appicon.png">
     <title>HJM Nursing Reviewer</title>
   </head>
   <body>
